0.8.9 (UNRELEASED)
------------------
- umockdev-record: Ignore stderr from udevadm info, to avoid udev debug
  message spew on stderr if udev debugging is enabled. (Debian #767909)

0.8.8 (2014-09-22)
------------------
- Skip O_TMPFILE test on Linux versions which don't support that.

0.8.7 (2014-09-19)
------------------
- /umockdev-run/integration/input-evtest-evemu test: Be more liberal in parsing
  evtest's SYN event output, as it changed in 1.32.
- preload: Properly wrap open() with O_TMPFILE. Thanks Cemil Azizoglu.

0.8.6 (2014-09-01)
------------------
- Fix compilation on sparc with gcc 4.9.
- Support attributes with leading directory names, such as "queue/rotational".
  (issue #41)
- Create /sys/block symlink for block devices (other part of issue #41).

0.8.5 (2014-07-11)
------------------
- Fix building with gcc 4.9 on 32 bit architectures.
- Restrict input-touchpad test case to 64 bit architectures, as we don't
  currently have recorded ioctls for 32 bit.
- Lower number of iterations in mt_uevent test case to avoid overflowing the
  netlink buffer on loaded machines.

0.8.4 (2014-07-10)
------------------
- Make SKIP messages go to to stdout, like all the other the test suite output.
- Fix test case failures when running tests without a controlling tty.

0.8.3 (2014-07-10)
------------------
- Add umockdev_testbed_get_property() method. This is mostly for internal
  umockdev testing, umockdev users should use libudev/gudev get_property
  functions.
- preload: Make path redirection to testbed thread-safe for wrapped functions.
  This does NOT address all multi-thread issues, but should work for simple
  cases. (https://launchpad.net/bugs/1336671)
- Make debug logging dynamically controllable with the $UMOCKDEV_DEBUG
  environment variable. See README.rst for details.
- Emulate isatty(). It would previously return true for emulated devices as
  PTYs are being used internally, but the actual emulated device is not always