@@ -297,21 +297,17 @@ split_devfile_arg(string arg, out string dev, out string devnum, out string fnam
 
     if (Posix.S_ISCHR(st.st_mode) || Posix.S_ISBLK(st.st_mode)) {
         // if we have a device node, get devnum from stat
-        devnum = ((Posix.major(st.st_rdev) << 8) + Posix.minor(st.st_rdev)).to_string();
+        devnum = Posix.major(st.st_rdev).to_string() + ":" + Posix.minor(st.st_rdev).to_string();
     } else if (Posix.S_ISSOCK(st.st_mode)) {
         // Unix sockets are passed by name
         devnum = dev;
     } else {
         // otherwise we assume that we have a sysfs device, resolve via dev attribute
-        string contents;
         try {
-            FileUtils.get_contents(Path.build_filename(dev, "dev"), out contents);
+            FileUtils.get_contents(Path.build_filename(dev, "dev"), out devnum);
         } catch (Error e) {
             exit_error("Cannot open %s/dev: %s", dev, e.message);
         }
-        string[] fields = contents.strip().split(":");
-        assert(fields.length == 2);
-        devnum = ((int.parse(fields[0]) << 8) | int.parse(fields[1])).to_string();
     }
 }
 
